[gd_scene load_steps=10 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://NameInput.gd" type="Script" id=2]

[sub_resource type="DynamicFontData" id=5]
font_path = "res://fonts/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = SubResource( 5 )

[sub_resource type="InputEventAction" id=3]
action = "start_game"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[sub_resource type="DynamicFontData" id=8]
font_path = "res://fonts/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=6]
size = 64
font_data = SubResource( 8 )

[sub_resource type="DynamicFont" id=7]
size = 38
font_data = SubResource( 8 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="." groups=["hud"]]
anchor_right = 1.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="." groups=["hud"]]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -79.5
margin_bottom = 79.5
custom_fonts/font = SubResource( 2 )
text = "Dodge the DICKS!"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="." groups=["hud"]]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -90.0
margin_top = -200.0
margin_right = 90.0
margin_bottom = -100.0
custom_fonts/font = SubResource( 2 )
shortcut = SubResource( 4 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="." groups=["hud"]]
wait_time = 2.0
one_shot = true

[node name="LeaderboardButton" type="Button" parent="." groups=["hud"]]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -125.0
margin_top = -72.0
margin_right = -34.0
margin_bottom = -52.0
rect_scale = Vector2( 2.8536, 2.31094 )
text = "Leaderboard"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
visible = false
anchor_right = 1.0
margin_top = 64.0
margin_bottom = 159.0
custom_fonts/font = SubResource( 6 )
text = "Submit
Score"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameInput" type="TextEdit" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 32.0
margin_right = -32.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 7 )
highlight_current_line = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubmitButton" type="Button" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -100.0
margin_bottom = -36.0
custom_fonts/font = SubResource( 2 )
text = "SUBMIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PostHighscore" type="HTTPRequest" parent="."]

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="pressed" from="LeaderboardButton" to="." method="_on_LeaderboardButton_pressed"]
[connection signal="text_changed" from="NameInput" to="NameInput" method="_on_NameInput_text_changed"]
[connection signal="pressed" from="SubmitButton" to="." method="_on_SubmitButton_pressed"]
